Modifications Required to make it compile